--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,8 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  schedule:
+    - cron: '10 0 1 * *'
 
 jobs:
 
@@ -15,4 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: |
+        docker login -u scotch190 -p ${{ secrets.DOCKER_PSWD }}
+        docker build -t scotch190/pyenv:latest .
+        docker push scotch190/pyenv:latest
