--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
-        docker login ghcr.io -u $USER_NAME -p ${{secrets.PAT_CLASSIC}}
+        echo ${{secrets.PAT_CLASSIC}} | docker login ghcr.io -u $USER_NAME --password-stdin
         docker build -t $IMG_NAME .
         docker push $IMG_NAME
