--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,5 +17,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
-        echo ${{secrets.PAT_CLASSIC}} | docker login ghcr.io -u $USR_NAME --password-stdin
-        docker build -t $IMG_NAME .
+        echo $USR_NAME
+        echo $IMG_NAME
+        # echo ${{secrets.PAT_CLASSIC}} | docker login ghcr.io -u $USR_NAME --password-stdin
+        # docker build -t $IMG_NAME .
+        # docker push ghcr.io/$IMG_NAME
