--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,8 @@ jobs:
     - name: Build the Docker image
       env:
         USR_NAME: CocaButon60s
-        IMG_NAME: $USR_NAME/pyenv:latest
+        IMG_NAME: CocaButon60s/pyenv:latest
       run: |
-        echo $USR_NAME
-        echo $IMG_NAME
-        # echo ${{secrets.PAT_CLASSIC}} | docker login ghcr.io -u $USR_NAME --password-stdin
-        # docker build -t $IMG_NAME .
-        # docker push ghcr.io/$IMG_NAME
+        echo ${{secrets.PAT_CLASSIC}} | docker login ghcr.io -u $USR_NAME --password-stdin
+        docker build -t $IMG_NAME .
+        docker push ghcr.io/$IMG_NAME
