--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       env:
-        USR_NAME: CocaButon60s
+        USR_NAME: cocabuton60s/pyenv:latest
         IMG_NAME: CocaButon60s/pyenv:latest
       run: |
         echo ${{secrets.PAT_CLASSIC}} | docker login ghcr.io -u $USR_NAME --password-stdin
